# solra

./: .editorconfig  .gitignore  .gitleaks.toml  09索拉交互设计.md  11索拉安全架构设计.md  13索拉质量保障设计.md  14索拉API设计规范.md  15索拉工程目录设计.md  Makefile  README.md  _git_status.txt  build.gradle.kts  gradle.properties  settings.gradle.kts  vcpkg-configuration.json
.github/workflows/: ci-cd.yml  client-ci.yml  core-build.yml  core-full-matrix.yml  docker-push.yml  proto-ci.yml  security-scan.yml  (+1 more)
.github/workflows.backup/: ai-services-ci.yml  auto-deploy.yml  core-build.yml  core-full-matrix.yml  pr-check.yml
01docs/: 01互联网创业与社会趋势分析.md  02索拉产品思想体系.md  03索拉商业模式.md  04索拉需求分析.md  05索拉产品设计.md  06索拉功能清单进度.md  07索拉应用架构设计.md  08索拉技术架构设计.md  09索拉交互架构设计.md  10索拉数据架构设计.md  12索拉部署运维架构设计.md  15索拉工程目录设计.md  16索拉工程开发进度.md  功能清单完成进度.md
ai-services/gpu-scheduler/: Dockerfile  README.md  pyproject.toml
ai-services/gpu-scheduler/k8s/: deployment.yaml  gpu-nodepool.yaml
ai-services/gpu-scheduler/src/: main.py  monitor.py  scheduler.py
ai-services/recommendation-pipeline/: Dockerfile  pyproject.toml
ai-services/recommendation-pipeline/src/: config.py  main.py
ai-services/recommendation-pipeline/src/api/: dependencies.py  routes.py
ai-services/recommendation-pipeline/src/core/: engine.py
ai-services/recommendation-pipeline/src/models/: schemas.py
ai-services/recommendation-pipeline/src/tests/: test_engine.py  test_routes.py
ai-services/safety-model-service/: Dockerfile  pyproject.toml
ai-services/safety-model-service/src/: __init__.py  config.py  main.py
ai-services/safety-model-service/src/api/: routes.py
ai-services/safety-model-service/src/config/: settings.py
ai-services/safety-model-service/src/core/: __init__.py  audio_classifier.py  base_classifier.py  image_classifier.py  pipeline.py  text_classifier.py
ai-services/safety-model-service/src/tests/: test_pipeline.py
ai-services/tts-service/: Dockerfile  pyproject.toml
ai-services/tts-service/src/: config.py  main.py
ai-services/tts-service/src/api/: dependencies.py  routes.py
ai-services/tts-service/src/core/: tts_engine.py
ai-services/tts-service/src/models/: schemas.py
ai-services/tts-service/src/tests/: test_routes.py  test_tts_engine.py
clients/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: lib.rs  main.rs
clients/desktop/src-tauri/src/core/: animation.rs  ffi.rs  inference.rs  mod.rs  render.rs  streaming.rs  webrtc.rs
clients/desktop/src-tauri/src/ipc/: avatar_cmd.rs  ipc_tests.rs  mod.rs  render_cmd.rs  space_cmd.rs  system_cmd.rs
clients/desktop/src-tauri/src/services/: api_client.rs  auth_service.rs  auto_updater.rs  cache_service.rs  cache_service_test.rs  mod.rs
core/: .clang-format  .clang-tidy  CMakeLists.txt  Makefile  README.md  vcpkg.json
core/01docs/: 01需求分析.md  02产品设计.md  03功能清单.md  04应用设计.md  05技术设计.md  06交互设计.md  07数据设计.md  08安全设计.md  09部署设计.md  10质量设计.md  11API设计.md  12工程目录.md  13开发进度.md
core/cmake/: FindDependencies.cmake
core/cmake/toolchains/: README.md  android.cmake  android.toolchain.cmake  ios.cmake  ios.toolchain.cmake  macos.toolchain.cmake  windows.toolchain.cmake
core/cmake/triplets/: arm64-android.cmake  arm64-ios.cmake
core/include/solra/: solra_animation.h  solra_core.h  solra_inference.h  solra_npc.h  solra_render.h  solra_streaming.h  solra_types.h  solra_webrtc.h
core/scripts/: build-android.sh  build-ios.sh  build-macos.sh  build-windows.sh
core/src/animation/: CMakeLists.txt  animation.cpp  blendshape.cpp  blendshape.hpp  limb_ik.cpp  limb_ik.hpp  lipsync.cpp  lipsync.hpp  skeletal_animation.cpp  skeletal_animation.hpp  solra_math.hpp
core/src/core/: CMakeLists.txt  alloc.cpp  core.cpp  version.cpp
core/src/inference/: CMakeLists.txt  behavior_tree.cpp  behavior_tree.hpp  inference.cpp  inference_benchmark.cpp  inference_benchmark.hpp  inference_pipeline.cpp  inference_pipeline.hpp  llama_integration.cpp  llama_integration.hpp  model_ota.cpp  model_ota.hpp  npc_api.cpp  npc_dialogue.cpp  npc_dialogue.hpp  npu_backend.cpp  npu_backend.hpp  onnx_backend.cpp  onnx_backend.hpp
core/src/platform/: CMakeLists.txt  android_platform.cpp  android_platform.hpp  ios_platform.cpp  ios_platform.hpp  macos_platform.cpp  macos_platform.hpp  windows_platform.cpp  windows_platform.hpp
core/src/platform/android/: platform_android.cpp
core/src/platform/ios/: platform_ios.mm
core/src/platform/macos/: platform_macos.mm
core/src/platform/windows/: platform_windows.cpp
core/src/render/: CMakeLists.txt  builtin_shaders.hpp  camera_system.cpp  camera_system.hpp  d3d12_device.cpp  d3d12_device.hpp  d3d12_device_bridge.cpp  gpu_abstraction.cpp  gpu_abstraction.hpp  metal_device.cpp  metal_device.hpp  metal_device_bridge.mm  opengl_device.cpp  opengl_device.hpp  pbr_material.cpp  pbr_material.hpp  post_processing.cpp  post_processing.hpp  render.cpp  render_benchmark.cpp  render_benchmark.hpp  render_jank_monitor.cpp  render_jank_monitor.hpp  scene.cpp  scene_graph.cpp  scene_graph.hpp  shader_compiler.cpp  shader_compiler.hpp  shadow_ssao.hpp  vulkan_device.cpp  vulkan_device.hpp
core/src/streaming/: CMakeLists.txt  cache.cpp  cache.hpp  http_downloader.cpp  http_downloader.hpp  lod_streaming.cpp  lod_streaming.hpp  predictive_preload.cpp  predictive_preload.hpp  progressive_lod.cpp  progressive_lod.hpp  quic_transport.cpp  quic_transport.hpp  resumable_download.cpp  resumable_download.hpp  streaming.cpp
core/src/webrtc/: CMakeLists.txt  p2p_data_channel.cpp  p2p_data_channel.hpp  signaling_client.cpp  signaling_client.hpp  spatial_audio.cpp  spatial_audio.hpp  turn_stun_signaling.cpp  turn_stun_signaling.hpp  webrtc.cpp  webrtc_build.hpp  webrtc_session.cpp  webrtc_session.hpp
core/tests/benchmark/: CMakeLists.txt  bench_render.cpp
core/tests/unit/: CMakeLists.txt  test_core.cpp  test_render.cpp  test_streaming.cpp  test_types.cpp  test_types_ext.cpp
infra/: README.md  deploy-dev.ps1  deploy-dev.sh  deploy-staging.ps1  deploy-staging.sh
services/: ddd-structure.txt
(+1455 files in other folders)
