[tool.poetry]
name = "solra-safety-model"
version = "0.1.0"
description = "Solra Safety Model Service - Content safety classification and filtering"
authors = ["Solra Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
grpcio = "^1.64.0"
protobuf = "^4.25.0"
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
prometheus-client = "^0.20.0"
opentelemetry-api = "^1.25.0"
opentelemetry-sdk = "^1.25.0"
opentelemetry-instrumentation-fastapi = "^0.46b0"
structlog = "^24.2.0"
torch = "^2.3.0"
transformers = "^4.41.0"
sentencepiece = "^0.2.0"
pillow = "^10.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
black = "^24.4.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
