[package]
name = "solra-desktop"
version = "0.1.0"
edition = "2021"
description = "Solra Windows Desktop Client — Tauri 2 + Core FFI"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
num_cpus = "1"

[dev-dependencies]
mockall = "0.13"
tokio-test = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "solra_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "solra-desktop"
path = "src/main.rs"
